# Engenharia_dados

./: .gitignore  README.md  pyproject.toml
data_processed/: dados_combinados.csv
nosql/: aprendendonosql.txt
notebooks/: exploracao.ipynb  exploracao_csv_json.ipynb  exploracaocsv.ipynb  exploracaojson.ipynb  main.ipynb
pipeline_dados/anotacoes/: anotacao.txt
pipeline_mongodb/: extract_and_save.ipynb  tranform_data.ipynb
projeto_requests/: amazon.csv  dados_repo.py  linguagens_repos.ipynb  manipula.repo.py
scripts/: fusao.py  processamentos_dados.py
sql/: query.sql
