[tool.poetry]
name = "engenharia-dados"
version = "0.1.0"
description = ""
authors = ["victor <victorsoaresferreira09@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
wget = "^3.2"
notebook = "^7.2.1"
pandas = "^2.2.2"
requests = "^2.32.3"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
